--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flip-move": "^3.0.5",
     "react-redux": "^8.1.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.70.0",
